@@ -19,3 +19,5 @@ data:extend{
     linked_game_control = "open-gui",
   },
 }
+
+require("database")
